force-app/main/default/objects/My_Accessory__c/My_Accessory__c.object-meta.xml
<CustomObject>
    <label>My Accessory</label>
    <nameField>
        <label>My Accessory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Accessories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>