force-app/main/default/objects/My_Accessory__c/fields/My_Component__c.field-meta.xml
<CustomField>
    <fullName>My_Component__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>My Component</label>
    <referenceTo>My_Component__c</referenceTo>
    <relationshipLabel>Accessory Shadow</relationshipLabel>
    <relationshipName>Accessory_Shadow</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>